security: add body size limit, max message length, safer error logging, remove hardcoded email from client

--- a/server/.env.example
+++ b/server/.env.example
@@ -27,3 +27,6 @@ SMTP_PASS=your-mailtrap-password
 PORT=3001
 CLIENT_ORIGIN=http://localhost:5173
 NODE_ENV=development
+
+# Production: Set CLIENT_ORIGIN to your actual domain(s)
+# CLIENT_ORIGIN=https://yourdomain.com
