--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "test-email": "node test-email.js"
   },
   "dependencies": {
+    "@getbrevo/brevo": "^3.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
